<resources>
<<<<<<< HEAD
    <string name="app_name">PROYECTO_FINAL_1H_G08</string>
    <string name="calendario">Calendario</string>
    <string name="costo">Costo</string>
    <string name="marca">Marca</string>
    <string name="date">Date:</string>
    <string name="matriculado">Matriculado:</string>
    <string name="placa">Placa</string>
    <string name="guardar">Guardar</string>
    <string name="lista_de_vehiculos">Lista de Vehiculos</string>
    <string name="color">color</string>
    <string name="Salir">Salir</string>
</resources>
=======
    <string name="app_name">PROYECTO_FINAL</string>
    <string name="title_activity_login">Ingreso</string>

    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="register">Registrarse</string>

    <string name="action_persist">Persistir</string>
    <string name="action_logout">Salir</string>

    <string name="title_activity_welcome">Lista de Vehiculos</string>
    <string name="title_activity_register">Registro</string>
    <string name="title_activity_form">Ingresar Datos</string>

    <string name="input_placa">Ingrese la placa</string>
    <string name="input_marca">Ingrese la marca</string>
    <string name="input_costo">Ingrese el costo</string>
    <string name="input_color">Ingrese el color</string>
    <string name="switch_matriculado">Esta matriculado:</string>

    <string name="save">Guardar</string>
    <string name="title_activity_edit_form">EditFormActivity</string>

</resources>
>>>>>>> d697a6ab697298e7b93568e2197ce1eb0514b8c8
