<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".vista.DatosVehiculoActivity">


    <ListView
        android:id="@+id/lista"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_gravity="top"
        android:layout_marginTop="5dp"
        android:text="@string/lista_de_vehiculos"></ListView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryDark"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/placa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/placa"
                android:inputType="text" />

            <EditText
                android:id="@+id/marca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/marca"
                android:inputType="text" />

            <CalendarView
                android:id="@+id/calendario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/calendario"
                android:inputType="date" />

            <TextView
                android:id="@+id/displayFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:text="@string/date" />

            <EditText
                android:id="@+id/costo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/costo"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:text="@string/matriculado" />

            <Switch
                android:id="@+id/matriculado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:ems="10" />

            <EditText
                android:id="@+id/color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/color"
                android:inputType="text" />

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/guardar"
                android:textColorHint="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnLeer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="Editar"
                android:textColorHint="@color/colorPrimaryDark"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>